# ticket_manager_rust_backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
migrations/: 001_create_users.sql  002_create_departments.sql  003_create_tickets.sql  004_create_messages.sql  005_create_attachments.sql  006_create_failed_jobs.sql  007_add_performance_indexes.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  routes.rs
src/departments/: handlers.rs  models.rs  routes.rs
src/messages/: handlers.rs  mod.rs  models.rs  routes.rs  websocket.rs
src/notifications/: email.rs  jobs.rs  mod.rs  templates.rs
src/storage/: local.rs  mod.rs
src/tickets/: handlers.rs  models.rs  routes.rs
src/users/: handlers.rs  models.rs  routes.rs
