[package]
name = "ticket_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate", "derive"], default-features = false }

# Auth
jsonwebtoken = "9"
bcrypt = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
dotenvy = "0.15"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "hostname", "builder"] }

# File handling
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
futures-util = "0.3"

# Query parameters
serde_urlencoded = "0.7"

# Async traits
async-trait = "0.1"

# OpenSSL vendored (bundle it to avoid system dependency)
openssl = { version = "0.10", features = ["vendored"] }
